objects/vlocity_ins__AssetPricingAdjustment__c.object
<CustomObject>
    <description>Represents the tax and fee adjustment entry made on a policy and optionally on Insured Item, Policy Coverage, or Party Relationship. Master-detail chid object of the Asset (policy).</description>
    <fields>
        <fullName>vlocity_ins__AdjustmentType__c</fullName>
        <description>Type of associated price list entry.</description>
        <label>Adjustment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Amount__c</fullName>
        <description>Calculated amount of the price list entry on the associated Asset or AssetInsuredItem, AssetCoverage, or AssetPartyRelationship.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ApplicableItemType__c</fullName>
        <description>Indicates which item is associated with the itemzed price list entry amount.</description>
        <label>Applicable Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coverage</fullName>
                </value>
                <value>
                    <fullName>Insured Item</fullName>
                </value>
                <value>
                    <fullName>Party Relationship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetCoverageId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Coverage associated with the itemized price list entry amount.</description>
        <label>Coverage</label>
        <referenceTo>vlocity_ins__AssetCoverage__c</referenceTo>
        <relationshipLabel>Policy Pricing Adjustments</relationshipLabel>
        <relationshipName>PolicyPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetId__c</fullName>
        <description>Asset associated with itemized price list entry amount.</description>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Policy Pricing Adjustments</relationshipLabel>
        <relationshipName>AssetPricingAdjustments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetInsuredItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Insured item associated with the itemized price list entry amount.</description>
        <label>Insured Item</label>
        <referenceTo>vlocity_ins__AssetInsuredItem__c</referenceTo>
        <relationshipLabel>Policy Pricing Adjustments</relationshipLabel>
        <relationshipName>PolicyPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetPartyRelationshipId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Party relationship associated with the itemized price list entry amount.</description>
        <label>Party Relationship</label>
        <referenceTo>vlocity_ins__AssetPartyRelationship__c</referenceTo>
        <relationshipLabel>Policy Pricing Adjustments</relationshipLabel>
        <relationshipName>PolicyPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetPricingAdjustmentReferenceId__c</fullName>
        <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
        <label>AssetPricingAdjustmentReferenceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetTransactionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Transaction associated with the itemized price list entry amount.</description>
        <label>Transaction</label>
        <referenceTo>vlocity_ins__AssetTransaction__c</referenceTo>
        <relationshipLabel>Policy Pricing Adjustments</relationshipLabel>
        <relationshipName>PolicyPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PriceListEntryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price list entry used to calculate the amount.</description>
        <label>Tax/Fee Id</label>
        <referenceTo>vlocity_ins__PriceListEntry__c</referenceTo>
        <relationshipLabel>Policy Pricing Adjustments</relationshipLabel>
        <relationshipName>PolicyPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PriceListEntryName__c</fullName>
        <description>Name of price list entry used to calculate the amount.</description>
        <formula>vlocity_ins__PriceListEntryId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax/Fee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
        <label>Promotion</label>
        <referenceTo>vlocity_ins__Promotion__c</referenceTo>
        <relationshipName>AssetPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProvisioningStatus__c</fullName>
        <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
        <label>ProvisioningStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Sequence__c</fullName>
        <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Policy Pricing Adjustment</label>
    <nameField>
        <label>Policy Pricing Adjustment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Pricing Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>vlocity_ins__AdjustmentTypeValidation</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__AdjustmentType__c &lt;&gt; vlocity_ins__PriceListEntryId__r.vlocity_ins__Type__c</errorConditionFormula>
        <errorDisplayField>vlocity_ins__AdjustmentType__c</errorDisplayField>
        <errorMessage>Adjustment Type field must be equal to the Type field on the Price List Entry.</errorMessage>
    </validationRules>
</CustomObject>